# ball

./: CMakeLists.txt
cmake/: FindSIP.cmake
include/BALL/DATATYPE/: string.h  string.iC
source/APPLICATIONS/TOOLS/: CMakeLists.txt  sources.cmake
source/DATATYPE/: string.C
source/EXTENSIONS/: CMakeLists.txt
source/EXTENSIONS/BALLAXY/: CMakeLists.txt
source/FORMAT/: paramFile.C
source/PYTHON/: pyInterpreter.C
source/PYTHON/EXTENSIONS/BALL/: PDBAtom.sip  angle.sip  atom.sip  atomContainer.sip  bond.sip  box3.sip  chain.sip  file.sip  fragment.sip  global.sip  molecule.sip  nucleicAcid.sip  options.sip  pair.sip  peptideBuilder.sip  property.sip  protein.sip  pyIndexList.sip  residue.sip  secondaryStructure.sip  simpleBox3.sip  string.sip  system.sip  timeStamp.sip  vector2.sip  vector3.sip  version.sip
source/STRUCTURE/: assignBondOrderProcessor.C
workflow_support/ballaxy/: CMakeLists.txt
workflow_support/ballaxy/cmake/: env.sh.in
workflow_support/galaxy/: README  README.md
