PROJECT(BALLaxy)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12 FATAL_ERROR)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)

#FIND_PACKAGE(CTD2Galaxy)
#IF (NOT CTD2GALAXY)
#	MESSAGE(ERROR "CTD2Galaxy or one of its requirements could not be found. The BALLaxy will not be built.")
#ELSE()

SET(CF_BALL_PACKAGE_VERSION 1.5.0)

SET(BALL_BUILD_PATH "" CACHE PATH "Path to the BALL installation.")
SET(BALL_DATA_PATH "" CACHE PATH "Path to the BALL data.")
SET(BALL_LIBRARY_PATH "${BALL_BUILD_PATH}/lib")
SET(BALL_TOOLS_PATH "${BALL_BUILD_PATH}/bin/TOOLS")

SET(BALLAXY_TOOLS_DIR ${CMAKE_BINARY_DIR}/ballaxy-${CF_BALL_PACKAGE_VERSION})
SET(CTD2GALAXY_MACROS_FILE ${PROJECT_SOURCE_DIR}/macros.xml)
SET(CTD2GALAXY_FORMATS_FILE ${PROJECT_SOURCE_DIR}/file_formats.txt)

CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/cmake/env.sh.in ${BALLAXY_TOOLS_DIR}/env.sh @ONLY)



# Copy TOOLS executables
FILE(GLOB TOOLS_EXECUTABLES "${BALL_TOOLS_PATH}/*")
FOREACH(tool ${TOOLS_EXECUTABLES})
	FILE(COPY ${tool} DESTINATION ${BALLAXY_TOOLS_DIR}/bin)
ENDFOREACH()




