# The name of the project to build
PROJECT(TOOLS)

# Set BALL specific includes and compilerflags
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
ADD_DEFINITIONS(${BALL_DEFINITIONS})
ADD_DEFINITIONS(${BALL_ADD_CXXFLAGS})

# Get TOOLS targets
INCLUDE(sources.cmake)

FOREACH(source ${TOOLS_EXECUTABLES})
	ADD_EXECUTABLE(${source} ${source}.C)
	TARGET_LINK_LIBRARIES(${source} BALL Qt5::Core)
	SET_PROPERTY(TARGET ${source} PROPERTY FOLDER TOOLS)
	SET_TARGET_PROPERTIES(${source} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/TOOLS")
	INSTALL(TARGETS ${source}
		COMPONENT "${COMPONENT_TOOLS}"
		RUNTIME DESTINATION "${BALL_TOOLS_INSTALL_DIRECTORY}"
	)
ENDFOREACH()
